--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,7 @@ SET(CLANG_FORMAT CLANG_FORMAT-NOTFOUND CACHE FILEPATH "C/C++/Java/JavaScript/JSO
 IF(NOT CLANG_FORMAT OR "${CLANG_FORMAT}" STREQUAL CLANG_FORMAT-NOTFOUND)
     UNSET(CLANG_FORMAT_PATH)
     FindClangFormat(CLANG_FORMAT_PATH)
-    MESSAGE(STATUS "Found clang-format: ${CLANG_FORMAT_PATH}")
+    MESSAGE(STATUS "clang-format: ${CLANG_FORMAT_PATH}")
     SET(CLANG_FORMAT ${CLANG_FORMAT_PATH} CACHE FILEPATH "C/C++/Java/JavaScript/JSON/Objective-C/Protobuf/C# code formatter" FORCE)
     UNSET(CLANG_FORMAT_PATH)
 ENDIF()
@@ -144,167 +144,188 @@ MESSAGE(DEBUG "Source version: ${CHAN_SOURCE_VERSION} [${CHAN_SOURCE_TS}]")
 MESSAGE(STATUS "Project version: ${CHAN_VER_STR}")
 
 # CMake
+INCLUDE(CMakeDependentOption)
+OPTION(CHECK_SOURCE_DATE_EPOCH "Check existience of SOURCE_DATE_EPOCH environment variable" OFF)
+OPTION(BUILD_CHAN_QUECTEL_BINARY "Build chan_quectel binary" ON)
+OPTION(BUILD_OPENWRT_MAKEFILE "Build OpenWRT Makefile" OFF)
 
-IF(OPENWRT_PACKAGE)
-    OPTION(OPENWRT_PACKAGE_STANDALONE "OpenWRT standalone package" ON)
+# BUILD_CHAN_QUECTEL_BINARY
+cmake_dependent_option(ICONV_CONST "iconv() const declaration of input buffer" OFF "BUILD_CHAN_QUECTEL_BINARY" OFF)
+cmake_dependent_option(BUILD_APPLICATIONS "Build applications" ON "BUILD_CHAN_QUECTEL_BINARY" OFF)
+cmake_dependent_option(PTIME_USE_DEFAULT "Use default framing" ON "BUILD_CHAN_QUECTEL_BINARY" OFF)
+
+# BUILD_OPENWRT_MAKEFILE
+cmake_dependent_option(BUILD_OPENWRT_MAKEFILE_STANDALONE "Build standalone OpenWRT Makefile" ON "BUILD_OPENWRT_MAKEFILE;OPENWRT_PACKAGE" OFF)
+
+IF(CHECK_SOURCE_DATE_EPOCH)
+    ADD_SUBDIRECTORY(cmake/source-date-epoch source-date-epoch)
 ENDIF()
 
-IF(NOT DEFINED ASTERISK_VERSION_NUM)
-    FIND_PACKAGE(PkgConfig)
-    IF(${PKG_CONFIG_FOUND})
-        MESSAGE(DEBUG "Obtaining Asterisk version from pkg-info")
-        pkg_check_modules(AST QUIET asterisk)
-        IF(${AST_FOUND})
-            MESSAGE(DEBUG "pkg-info: asterisk module found")
-            pkg_get_variable(ASTERISK_VERSION_NUM asterisk version_number)
-            MESSAGE(VERBOSE "Asterisk version (from pkg-info): ${ASTERISK_VERSION_NUM}")
+IF(BUILD_CHAN_QUECTEL_BINARY)
+    PROJECT(asterisk-chan-quectel
+        VERSION ${CHAN_VER_MAJOR}.${CHAN_VER_MINOR}.${CHAN_VER_PATCH}.${CHAN_VER_TWEAK}
+        HOMEPAGE_URL "http://github.com/RoEdAl/asterisk-chan-quectel"
+        DESCRIPTION "Asterisk channel driver for Quectel modules"
+        LANGUAGES C
+    )
+ELSE()
+    PROJECT(asterisk-chan-quectel
+        VERSION ${CHAN_VER_MAJOR}.${CHAN_VER_MINOR}.${CHAN_VER_PATCH}.${CHAN_VER_TWEAK}
+        HOMEPAGE_URL "http://github.com/RoEdAl/asterisk-chan-quectel"
+        DESCRIPTION "Asterisk channel driver for Quectel modules"
+        LANGUAGES NONE
+    )
+ENDIF()
+
+IF(BUILD_CHAN_QUECTEL_BINARY)
+    IF(NOT DEFINED ASTERISK_VERSION_NUM)
+        FIND_PACKAGE(PkgConfig)
+        IF(${PKG_CONFIG_FOUND})
+            MESSAGE(DEBUG "Obtaining Asterisk version from pkg-info")
+            pkg_check_modules(AST QUIET asterisk)
+            IF(${AST_FOUND})
+                MESSAGE(DEBUG "pkg-info: asterisk module found")
+                pkg_get_variable(ASTERISK_VERSION_NUM asterisk version_number)
+                MESSAGE(VERBOSE "Asterisk version (from pkg-info): ${ASTERISK_VERSION_NUM}")
+            ENDIF()
         ENDIF()
     ENDIF()
-ENDIF()
 
-IF(NOT DEFINED ASTERISK_VERSION_NUM)
-    MESSAGE(WARNING "ASTERISK_VERSION_NUM variable not defined, using default value")
-    SET(ASTERISK_VERSION_NUM 180000 CACHE STRING "Asterisk version")
-ENDIF()
+    IF(NOT DEFINED ASTERISK_VERSION_NUM)
+        MESSAGE(WARNING "ASTERISK_VERSION_NUM variable not defined, using default value")
+        SET(ASTERISK_VERSION_NUM 180000 CACHE STRING "Asterisk version")
+    ENDIF()
 
-OPTION(ICONV_CONST "iconv() const declaration of input buffer" OFF)
-OPTION(BUILD_APPLICATIONS "Build applications" ON)
-OPTION(PTIME_USE_DEFAULT "Use default framing" ON)
-SET(ICONV_T iconv_t CACHE STRING "iconv type")
-SET(AST_MODULE chan_quectel)
+    SET(ICONV_T iconv_t CACHE STRING "iconv type")
+    SET(AST_MODULE chan_quectel)
 
-MESSAGE(STATUS "Asterisk version: ${ASTERISK_VERSION_NUM}")
+    MESSAGE(STATUS "Asterisk version: ${ASTERISK_VERSION_NUM}")
 
-INCLUDE(CheckIncludeFile)
-INCLUDE(CheckIncludeFiles)
-INCLUDE(CheckSymbolExists)
+    INCLUDE(CheckIncludeFile)
+    INCLUDE(CheckIncludeFiles)
+    INCLUDE(CheckSymbolExists)
 
-PROJECT(asterisk-chan-quectel
-    VERSION ${CHAN_VER_MAJOR}.${CHAN_VER_MINOR}.${CHAN_VER_PATCH}.${CHAN_VER_TWEAK}
-    HOMEPAGE_URL "http://github.com/RoEdAl/asterisk-chan-quectel"
-    DESCRIPTION "Asterisk channel driver for Quectel modules"
-    LANGUAGES C
-)
+    SET(CMAKE_REQUIRED_DEFINITIONS "-DAST_MODULE_SELF_SYM=__internal_chan_quectel_self")
 
-SET(CMAKE_REQUIRED_DEFINITIONS "-DAST_MODULE_SELF_SYM=__internal_chan_quectel_self")
+    IF(DEFINED AST_HEADER_DIR)
+        MESSAGE(STATUS "Asterisk header directory: ${AST_HEADER_DIR}")
+        INCLUDE_DIRECTORIES(BEFORE ${AST_HEADER_DIR})
+        CHECK_INCLUDE_FILE(asterisk.h HAVE_ASTERISK_H -I${AST_HEADER_DIR})
+    ELSE()
+        CHECK_INCLUDE_FILE(asterisk.h HAVE_ASTERISK_H)
+    ENDIF()
 
-IF(DEFINED AST_HEADER_DIR)
-    MESSAGE(STATUS "Asterisk header directory: ${AST_HEADER_DIR}")
-    INCLUDE_DIRECTORIES(BEFORE ${AST_HEADER_DIR})
-    CHECK_INCLUDE_FILE(asterisk.h HAVE_ASTERISK_H -I${AST_HEADER_DIR})
-ELSE()
-    CHECK_INCLUDE_FILE(asterisk.h HAVE_ASTERISK_H)
-ENDIF()
+    IF(NOT HAVE_ASTERISK_H)
+        MESSAGE(FATAL_ERROR "Asterisk header not found.")
+    ENDIF()
 
-IF(NOT HAVE_ASTERISK_H)
-    MESSAGE(FATAL_ERROR "Asterisk header not found.")
-ENDIF()
+    CHECK_INCLUDE_FILES("stdarg.h;asterisk.h;asterisk/frame.h" HAVE_ASTERISK_FRAME_H)
+    CHECK_SYMBOL_EXISTS(AST_CONTROL_SRCCHANGE "stdarg.h;asterisk.h;asterisk/frame.h" HAVE_AST_CONTROL_SRCCHANGE)
 
-CHECK_INCLUDE_FILES("stdarg.h;asterisk.h;asterisk/frame.h" HAVE_ASTERISK_FRAME_H)
-CHECK_SYMBOL_EXISTS(AST_CONTROL_SRCCHANGE "stdarg.h;asterisk.h;asterisk/frame.h" HAVE_AST_CONTROL_SRCCHANGE)
+    CHECK_INCLUDE_FILE(fcntl.h HAVE_FCNTL_H)
+    CHECK_INCLUDE_FILE(inttypes.h HAVE_INTTYPES_H)
 
-CHECK_INCLUDE_FILE(fcntl.h HAVE_FCNTL_H)
-CHECK_INCLUDE_FILE(inttypes.h HAVE_INTTYPES_H)
+    CHECK_INCLUDE_FILE(memory.h HAVE_MEMORY_H)
+    CHECK_SYMBOL_EXISTS(memchr memory.h HAVE_MEMCHR)
+    CHECK_SYMBOL_EXISTS(memmove memory.h HAVE_MEMMOVE)
+    CHECK_SYMBOL_EXISTS(memset memory.h HAVE_MEMSET)
 
-CHECK_INCLUDE_FILE(memory.h HAVE_MEMORY_H)
-CHECK_SYMBOL_EXISTS(memchr memory.h HAVE_MEMCHR)
-CHECK_SYMBOL_EXISTS(memmove memory.h HAVE_MEMMOVE)
-CHECK_SYMBOL_EXISTS(memset memory.h HAVE_MEMSET)
+    CHECK_INCLUDE_FILE(stdint.h HAVE_STDINT_H)
 
-CHECK_INCLUDE_FILE(stdint.h HAVE_STDINT_H)
+    CHECK_INCLUDE_FILE(stdlib.h HAVE_STDLIB_H)
+    CHECK_SYMBOL_EXISTS(realpath stdlib.h HAVE_REALPATH)
+    CHECK_SYMBOL_EXISTS(strtol stdlib.h HAVE_STRTOL)
 
-CHECK_INCLUDE_FILE(stdlib.h HAVE_STDLIB_H)
-CHECK_SYMBOL_EXISTS(realpath stdlib.h HAVE_REALPATH)
-CHECK_SYMBOL_EXISTS(strtol stdlib.h HAVE_STRTOL)
+    CHECK_INCLUDE_FILE(string.h HAVE_STRING_H)
+    CHECK_SYMBOL_EXISTS(memmem string.h HAVE_MEMMEM)
 
-CHECK_INCLUDE_FILE(string.h HAVE_STRING_H)
-CHECK_SYMBOL_EXISTS(memmem string.h HAVE_MEMMEM)
+    CHECK_INCLUDE_FILE(strings.h HAVE_STRINGS_H)
+    CHECK_SYMBOL_EXISTS(strcasecmp strings.h HAVE_STRCASECMP)
+    CHECK_SYMBOL_EXISTS(strncasecmp strings.h HAVE_STRNCASECMP)
 
-CHECK_INCLUDE_FILE(strings.h HAVE_STRINGS_H)
-CHECK_SYMBOL_EXISTS(strcasecmp strings.h HAVE_STRCASECMP)
-CHECK_SYMBOL_EXISTS(strncasecmp strings.h HAVE_STRNCASECMP)
+    CHECK_INCLUDE_FILE(sys/stat.h HAVE_SYS_STAT_H)
+    CHECK_INCLUDE_FILE(sys/time.h HAVE_SYS_TIME_H)
+    CHECK_INCLUDE_FILE(sys/types.h HAVE_SYS_TYPES_H)
+    CHECK_INCLUDE_FILE(termios.h HAVE_TERMIOS_H)
+    CHECK_INCLUDE_FILE(unistd.h HAVE_UNISTD_H)
 
-CHECK_INCLUDE_FILE(sys/stat.h HAVE_SYS_STAT_H)
-CHECK_INCLUDE_FILE(sys/time.h HAVE_SYS_TIME_H)
-CHECK_INCLUDE_FILE(sys/types.h HAVE_SYS_TYPES_H)
-CHECK_INCLUDE_FILE(termios.h HAVE_TERMIOS_H)
-CHECK_INCLUDE_FILE(unistd.h HAVE_UNISTD_H)
+    FIND_PACKAGE(Threads REQUIRED)
+    FIND_PACKAGE(ALSA 1.1.2 REQUIRED)
+    FIND_PACKAGE(SQLite3 3.6.5 REQUIRED)
+    FIND_PACKAGE(Iconv REQUIRED)
 
-FIND_PACKAGE(Threads REQUIRED)
-FIND_PACKAGE(ALSA 1.1.2 REQUIRED)
-FIND_PACKAGE(SQLite3 3.6.5 REQUIRED)
-FIND_PACKAGE(Iconv REQUIRED)
+    IF(ICONV_CONST)
+        SET(ICONV_CONST_STR "const")
+    ELSE()
+        SET(ICONV_CONST_STR "/**/")
+    ENDIF()
 
-IF(ICONV_CONST)
-    SET(ICONV_CONST_STR "const")
-ELSE()
-    SET(ICONV_CONST_STR "/**/")
-ENDIF()
+    IF(HAVE_AST_CONTROL_SRCCHANGE)
+        SET(HAVE_AST_CONTROL_SRCCHANGE_STR 1)
+    ELSE()
+        SET(HAVE_AST_CONTROL_SRCCHANGE_STR "/**/")
+    ENDIF()
 
-IF(HAVE_AST_CONTROL_SRCCHANGE)
-    SET(HAVE_AST_CONTROL_SRCCHANGE_STR 1)
-ELSE()
-    SET(HAVE_AST_CONTROL_SRCCHANGE_STR "/**/")
-ENDIF()
+    CONFIGURE_FILE(config.h.in include/config.h)
+    CONFIGURE_FILE(src/ptime-config.h.in include/ptime-config.h)
 
-CONFIGURE_FILE(config.h.in include/config.h)
-CONFIGURE_FILE(src/ptime-config.h.in include/ptime-config.h)
-
-INCLUDE(GNUInstallDirs)
-
-IF(DEFINED OPENWRT_PACKAGE)
-    ADD_SUBDIRECTORY(openwrt)
-ENDIF()
-ADD_SUBDIRECTORY(src)
+    INCLUDE(GNUInstallDirs)
+    ADD_SUBDIRECTORY(src)
 
 #
 # CPack
 # Based on: http://decovar.dev/blog/2021/09/23/cmake-cpack-package-deb-apt/
 #
+    IF(IS_GIT_REPO)
+        IF(NOT DEFINED CPACK_PACKAGE_ARCHITECTURE)
+            FIND_PROGRAM(DPKG_EXECUTABLE dpkg)
+            IF(NOT DPKG_EXECUTABLE)
+                MESSAGE(WARNING "Can not find dpkg in your path, setting CPACK_PACKAGE_ARCHITECTURE to amd64.")
+                SET(CPACK_PACKAGE_ARCHITECTURE amd64)
+            ELSE()
+                EXECUTE_PROCESS(
+                    COMMAND "${DPKG_EXECUTABLE}" --print-architecture
+                    OUTPUT_VARIABLE CPACK_PACKAGE_ARCHITECTURE
+                    OUTPUT_STRIP_TRAILING_WHITESPACE
+                )
+            ENDIF()
+        ENDIF()
 
-IF(NOT DEFINED CPACK_PACKAGE_ARCHITECTURE)
-    FIND_PROGRAM(DPKG_EXECUTABLE dpkg)
-    IF(NOT DPKG_EXECUTABLE)
-        MESSAGE(WARNING "Can not find dpkg in your path, setting CPACK_PACKAGE_ARCHITECTURE to amd64.")
-        SET(CPACK_PACKAGE_ARCHITECTURE amd64)
-    ELSE()
-        EXECUTE_PROCESS(
-            COMMAND "${DPKG_EXECUTABLE}" --print-architecture
-            OUTPUT_VARIABLE CPACK_PACKAGE_ARCHITECTURE
-            OUTPUT_STRIP_TRAILING_WHITESPACE
+        SET(CPACK_PACKAGE_VERSION ${CHAN_VER_STR})
+        SET(CPACK_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${CHAN_VER_FSTR}_${CPACK_PACKAGE_ARCHITECTURE}")
+        SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "${CMAKE_PROJECT_DESCRIPTION}")
+        SET(CPACK_PACKAGE_DESCRIPTION "Asterisk channel driver for Quectel and SimCOM modules.")
+        IF(NOT DEFINED CPACK_PACKAGE_CONTACT)
+            SET(CPACK_PACKAGE_CONTACT "roed@onet.eu")
+        ENDIF()
+
+        IF(NOT DEFINED CPACK_GENERATOR)
+            SET(CPACK_GENERATOR "TGZ;DEB")
+        ENDIF()
+        SET(CPACK_DEBIAN_FILE_NAME "${CMAKE_PROJECT_NAME}_${CHAN_VER_FSTR}_${CPACK_PACKAGE_ARCHITECTURE}.deb")
+        SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Edmunt Pienkowsky <${CPACK_PACKAGE_CONTACT}>")
+        SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libasound2, libsqlite3-0, asterisk")
+        SET(CPACK_DEBIAN_PACKAGE_SECTION comm)
+        SET(CPACK_DEBIAN_PACKAGE_PRIORITY optional)
+        SET(CPACK_DEBIAN_PACKAGE_RECOMMENDS "usb-modeswitch")
+        SET(CPACK_DEBIAN_PACKAGE_ENHANCES "asterisk")
+
+        FILE(COPY cpack/deb DESTINATION cpack
+            FILE_PERMISSIONS OWNER_WRITE OWNER_READ GROUP_READ WORLD_READ
+            PATTERN "postinst" PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ
         )
+        SET(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA ${PROJECT_BINARY_DIR}/cpack/deb/conffiles ${PROJECT_BINARY_DIR}/cpack/deb/postinst)
+
+        IF(NOT DEFINED CPACK_SOURCE_GENERATOR)
+            SET(CPACK_SOURCE_GENERATOR "TGZ")
+        ENDIF()
+        SET(CPACK_SOURCE_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${CHAN_VER_FSTR}_src")
+        SET(CPACK_SOURCE_IGNORE_FILES "/build/;/install/;/package/;/test/;/tools/;/\.vscode/;/\.git/;/\.gitignore;/\.gitattributes")
+
+        INCLUDE(CPack)
     ENDIF()
+ENDIF() # BUILD_CHAN_QUECTEL_BINARY
+
+IF(BUILD_OPENWRT_MAKEFILE)
+    ADD_SUBDIRECTORY(openwrt)
 ENDIF()
-
-SET(CPACK_PACKAGE_VERSION ${CHAN_VER_STR})
-SET(CPACK_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${CHAN_VER_FSTR}_${CPACK_PACKAGE_ARCHITECTURE}")
-SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "${CMAKE_PROJECT_DESCRIPTION}")
-SET(CPACK_PACKAGE_DESCRIPTION "Asterisk channel driver for Quectel and SimCOM modules.")
-IF(NOT DEFINED CPACK_PACKAGE_CONTACT)
-    SET(CPACK_PACKAGE_CONTACT "roed@onet.eu")
-ENDIF()
-
-IF(NOT DEFINED CPACK_GENERATOR)
-    SET(CPACK_GENERATOR "TGZ;DEB")
-ENDIF()
-SET(CPACK_DEBIAN_FILE_NAME "${CMAKE_PROJECT_NAME}_${CHAN_VER_FSTR}_${CPACK_PACKAGE_ARCHITECTURE}.deb")
-SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Edmunt Pienkowsky <${CPACK_PACKAGE_CONTACT}>")
-SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libasound2, libsqlite3-0, asterisk")
-SET(CPACK_DEBIAN_PACKAGE_SECTION comm)
-SET(CPACK_DEBIAN_PACKAGE_PRIORITY optional)
-SET(CPACK_DEBIAN_PACKAGE_RECOMMENDS "usb-modeswitch")
-SET(CPACK_DEBIAN_PACKAGE_ENHANCES "asterisk")
-
-FILE(COPY cpack/deb DESTINATION cpack
-    FILE_PERMISSIONS OWNER_WRITE OWNER_READ GROUP_READ WORLD_READ
-    PATTERN "postinst" PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ
-)
-SET(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA ${PROJECT_BINARY_DIR}/cpack/deb/conffiles ${PROJECT_BINARY_DIR}/cpack/deb/postinst)
-
-IF(NOT DEFINED CPACK_SOURCE_GENERATOR)
-    SET(CPACK_SOURCE_GENERATOR "TGZ")
-ENDIF()
-SET(CPACK_SOURCE_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${CHAN_VER_FSTR}_src")
-SET(CPACK_SOURCE_IGNORE_FILES "/build/;/install/;/package/;/test/;/tools/;/\.vscode/;/\.git/;/\.gitignore;/\.gitattributes")
-
-INCLUDE(CPack)
