--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,9 @@ INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/source-files.cmake)
 
 ADD_LIBRARY(asterisk-chan-quectel SHARED ${SOURCES} ${HEADERS})
 TARGET_COMPILE_FEATURES(asterisk-chan-quectel PUBLIC c_std_99)
+IF(CHECK_SOURCE_DATE_EPOCH)
+    ADD_DEPENDENCIES(asterisk-chan-quectel check-source-date-epoch)
+ENDIF()
 
 TARGET_INCLUDE_DIRECTORIES(asterisk-chan-quectel BEFORE PRIVATE ${CMAKE_BINARY_DIR}/include)
 
